add normalize styles, add some styles

--- a/src/Button/index.scss
+++ b/src/Button/index.scss
@@ -1,9 +1,9 @@
 @import "../Base Style/main.scss";
 
 .add {
-  background-color: #0f0;
+  //background-color: #000000;
 }
 
 .remove {
-  background-color: #f00;
+  //background-color: #f00;
 }
