--- a/src/Tabs/index.scss
+++ b/src/Tabs/index.scss
@@ -1,5 +1,10 @@
 @import "../Base Style/main.scss";
 
+
+.index_tab-content-holder_1sHz9R0FejJ3u_emU-RDGQ {
+	padding-top: 0;
+}
+
 .content {
 	margin: 50px 0;
 	padding: 20px;
